--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,7 +20,7 @@ set(PROJECT_SOURCES
         mainwindow.h
         mainwindow.ui
         ${TS_FILES}
-        graphwidget.h graphwidget.cpp graphwidget.h sortwidget.cpp sortwidget.h fileloader.cpp fileloader.h sortworker.cpp sortworker.h sortaction.h)
+        graphwidget.h graphwidget.cpp graphwidget.h sortwidget.cpp sortwidget.h fileloader.cpp fileloader.h sortworker.cpp sortworker.h sortaction.h graphworker.cpp graphworker.h graphDSL.cpp graphDSL.h helpwindow.h graphpanel.h sortpanel.h sortDSL.cpp sortDSL.h)
 
 if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
     qt_add_executable(simulator
