Fix some bugs and add DSL auto-completion
- Fixed a bug where deleting a node in the adjacency list incorrectly showed an empty prompt due to checking adjacency matrix data instead of adjacency list.
- Set the default mode to Graph Mode on startup, ensuring the adjacency list and adjacency matrix toggle button displays correctly.
- Fixed a bug in nested for-loops where only the first 'end' was recognized.
- Added a new DSL auto-completion feature for the editor, providing real-time prefix-based suggestions.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,7 +23,7 @@ set(PROJECT_SOURCES
         mainwindow.h
         mainwindow.ui
         ${TS_FILES}
-        graphwidget.h graphwidget.cpp graphwidget.h sortwidget.cpp sortwidget.h fileloader.cpp fileloader.h sortworker.cpp sortworker.h sortaction.h graphworker.cpp graphworker.h graphDSL.cpp graphDSL.h helpwindow.h graphpanel.h sortpanel.h sortDSL.cpp sortDSL.h  aiassistant.cpp aiassistant.h
+        graphwidget.h graphwidget.cpp graphwidget.h sortwidget.cpp sortwidget.h fileloader.cpp fileloader.h sortworker.cpp sortworker.h sortaction.h graphworker.cpp graphworker.h graphDSL.cpp graphDSL.h helpwindow.h graphpanel.h sortpanel.h sortDSL.cpp sortDSL.h  aiassistant.cpp aiassistant.h DSLCompleter.h
         )
 
 if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
